--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "sqliteconnection": "Data Source=DatingApp.db",
-    "sqlserverconnection": "Data Source=.;user id=ALPHADOM\\aberazain;Database=DatingApp;password=Alpha123;Trusted_Connection=True;ConnectRetryCount=0",
+    "sqliteconnection": "Data Source=BaseDB.db",
+    "sqlserverconnection": "Data Source=.;user id=ALPHADOM\\aberazain;Database=BaseDB;password=Alpha123;Trusted_Connection=True;ConnectRetryCount=0",
     "mysqlconnection": "server=localhost;userid=remote;pwd=password;port=3306;database=db;sslmode=none;"
   },
   "Logging": {
