--- a/DatingApp.API.csproj
+++ b/DatingApp.API.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />
     <!-- <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.3" /> -->
     <!-- <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.0-rtm-10056" /> -->
   </ItemGroup>
