--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "sqliteconnection": "Data Source=BaseDB.db",
     "sqlserverconnection": "Data Source=.;user id=ALPHADOM\\aberazain;Database=BaseDB;password=Alpha123;Trusted_Connection=True;ConnectRetryCount=0",
+    "postgresqlconnection": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=Apuestas;Pooling=true;",
     "mysqlconnection": "server=localhost;userid=remote;pwd=password;port=3306;database=db;sslmode=none;"
   },
   "Logging": {
